# UseLess

./: Main.hs  README.md  UseLess.cabal
Data/: HTML.hs  Misc.hs  OCTable.hs
Data/HTML/: Parser.hs  _Selector.hsplay
src/: UseLess.cabal
src/Data/: Crawler.hs  HTML.hs  Queue.hs
src/Data/HTML/: Selector.hs
